# master_thesis

./: .gitignore  CMakeLists.txt  Readme.md  package.xml  todo.org  uml.plantuml
launch/: test.launch
scripts/: action_vis.py  commands.py  config_manager.py  config_temp.py  design_space.py  eval_gen.py  eval_gsearch.py  fitness_fkt_plot.py  gif_converter.py  gridsearch.py  opti.py  parseRuns.py  plot_fun.py  visRuns.py  wsm.py
src/: main.cpp  pool.cpp  pool.hpp
src/environment/: ocm.cpp  ocm.hpp  robot.cpp  robot.hpp
src/obsoltete/: ga_path_generator.h  pool.hpp
src/oldCodebase/: grid_search.cpp  grid_search.h  test_io_tools.cpp  tools.hpp  unfinisched_tools.cpp
src/optimizer/: ga_path_generator.cpp  ga_path_generator.h  grid_search.cpp  grid_search.h  optimizer.cpp  optimizer.h  optimizer.hpp
src/optimizer/ga/: crossover.cpp  crossover.h  fitness.cpp  fitness.h  init.cpp  init.h  mutation.cpp  mutation.h  selection.cpp  selection.h
src/tools/: configuration.cpp  configuration.h  debug.cpp  debug.h  generic_exceptions.h  genome_tools.cpp  genome_tools.h  mapGen.cpp  mapGen.h  pa_serializer.cpp  pa_serializer.h  path_tools.cpp  path_tools.h  tools.hpp
test/: config.yml  test_app.cpp  test_eigen.cpp  test_genome.cpp  test_io_tools.cpp  test_new_optimizer.cpp  test_optimizer.cpp  test_ros_opti.cpp  test_tools.cpp
